[build-system]
requires= ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'Ruxx'
version = '1.7.818'
authors = [
    {name = 'trickerer01'},
]
maintainers = [
    {name = 'trickerer01'},
]
description = 'Advanced R34 downloader'
keywords = [
    'python',
    'downloader',
    'nsfw',
    'rule34',
    'rule34-downloader',
]
readme = 'README.md'
license = {file = 'LICENSE'}
classifiers = [
    'Topic :: Multimedia :: Video',
    'Topic :: Multimedia :: Graphics',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation',
    'Programming Language :: Python :: Implementation :: CPython',
    'Typing :: Typed',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
requires-python = '>=3.10'
dependencies = [
    'beautifulsoup4>=4.9.3',
    'iteration-utilities>=0.11.0',
    'PySocks>=1.7.1',
    'requests>=2.31',
]
[project.optional-dependencies]
default = []
static-analysis = [
    'ruff~=0.14.0',
]
pyinstaller = [
    'pyinstaller>=6.13.0',
]

[project.urls]
Repository = 'https://github.com/trickerer01/Ruxx'
Releases = 'https://github.com/trickerer01/Ruxx/releases'
Documentation = 'https://github.com/trickerer01/Ruxx#readme'
Tracker = 'https://github.com/trickerer01/Ruxx/issues'

[project.scripts]
Ruxx = 'ruxx:main'

[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = [
    'E402',    # module-import-not-at-top-of-file
    'E501',    # line-too-long
    'E731',    # lambda-assignment
    'E741',    # ambiguous-variable-name
    'UP015',   # redundant-open-modes
    'UP031',   # printf-string-formatting
    'UP036',   # outdated-version-block
    'B006',    # mutable-argument-default
    'B008',    # function-call-in-default-argument
    'B009',    # get-attr-with-constant
    'B011',    # assert-false
    'B017',    # assert-raises-exception
    'B023',    # function-uses-loop-variable (false positives)
    'B028',    # no-explicit-stacklevel
    'B904',    # raise-without-from-inside-except
    'A005',    # stdlib-module-shadowing
    'C401',    # unnecessary-generator-set
    'C402',    # unnecessary-generator-dict
    'PIE790',  # unnecessary-placeholder
    'SIM102',  # collapsible-if
    'SIM105',  # suppressible-exception
    'SIM108',  # if-else-block-instead-of-if-exp
    'SIM112',  # uncapitalized-environment-variables
    'SIM113',  # enumerate-for-loop
    'SIM114',  # if-with-same-arms
    'SIM115',  # open-file-with-context-handler
    'SIM117',  # multiple-with-statements
    'SIM223',  # expr-and-false
    'SIM300',  # yoda-conditions
    'T201',    # print
    'TD001',   # invalid-todo_tag
    'TD002',   # missing-todo_author
    'TD003',   # missing-todo_link
    'PLC0415', # import-outside-top-level
    'PLE0604', # invalid-all-object (false positives)
    'PLE0643', # potential-index-error (false positives)
    'PLW0603', # global-statement
    'PLW1510', # subprocess-run-without-check
    'PLW1641', # eq-without-hash
    'PLW2901', # redefined-loop-name
    'RET504',  # unnecessary-assign
    'RUF001',  # ambiguous-unicode-character-string
    'RUF012',  # mutable-class-default
    'RUF100',  # unused-noqa (flake8 has slightly different behavior)
]
select = [
    'E',      # pycodestyle Error
    'W',      # pycodestyle Warning
    'F',      # Pyflakes
    'I',      # isort
    'Q',      # flake8-quotes
    'N803',   # invalid-argument-name
    'N804',   # invalid-first-argument-name-for-class-method
    'UP',     # pyupgrade
    'B',      # flake8-bugbear
    'A',      # flake8-builtins
    'COM',    # flake8-commas
    'C4',     # flake8-comprehensions
    'FA',     # flake8-future-annotations
    'ISC',    # flake8-implicit-str-concat
    'ICN003', # banned-import-from
    'PIE',    # flake8-pie
    'T20',    # flake8-print
    'RSE',    # flake8-raise
    'RET504', # unnecessary-assign
    'SIM',    # flake8-simplify
    'TID251', # banned-api
    'TD',     # flake8-todos
    'PLC',    # Pylint Convention
    'PLE',    # Pylint Error
    'PLW',    # Pylint Warning
    'RUF',    # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
'src/ruxx.py' = [
]

[tool.ruff.lint.isort]
known-first-party = [
    'build',
    'hooks',
    'images',
    'release',
]
relative-imports-order = 'closest-to-furthest'

[tool.ruff.lint.flake8-quotes]
docstring-quotes = 'double'
multiline-quotes = 'single'
inline-quotes = 'single'
avoid-escape = false

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
]

[tool.ruff.lint.flake8-import-conventions]
banned-from = [
    'base64',
    'datetime',
    'functools',
    'glob',
    'hashlib',
    'itertools',
    'json',
    'math',
    'os',
    'pathlib',
    'random',
    're',
    'string',
    'sys',
    'time',
    'urllib.parse',
    'uuid',
    'xml',
]
